// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SrOnly > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div>
  <span
    class="rmd-sr-only"
  >
    Some content
  </span>
</div>
`;

exports[`SrOnly > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div>
  <span
    class="rmd-sr-only custom-class-name"
    style="opacity: 0.3;"
  >
    Some content
  </span>
</div>
`;

exports[`SrOnly > should apply the correct styling, HTML attributes, and allow a ref 3`] = `
<div>
  <span
    class="rmd-sr-only rmd-sr-only--focusable"
    style=""
    tabindex="0"
  >
    Some content
  </span>
</div>
`;

exports[`SrOnly > should apply the correct styling, HTML attributes, and allow a ref 4`] = `
<div>
  <span
    class="rmd-sr-only rmd-sr-only--focusable"
    style=""
    tabindex="-1"
  >
    Some content
  </span>
</div>
`;

exports[`SrOnly > should apply the correct styling, HTML attributes, and allow a ref 5`] = `
<div>
  <h4
    class="rmd-sr-only"
  >
    Some content
  </h4>
</div>
`;

exports[`SrOnly > should support a phoneOnly focusable state when the focusable prop is not true 1`] = `
<span
  class="rmd-phone-sr-only"
  data-testid="sr"
>
  Phone only text
</span>
`;

exports[`SrOnly > should support a phoneOnly focusable state when the focusable prop is not true 2`] = `
<span
  class="rmd-sr-only rmd-sr-only--focusable"
  data-testid="sr"
  tabindex="0"
>
  Phone only text
</span>
`;
